# tasklistbot

./: .env.example  .gitignore  Dockerfile  README.md  docker-compose.yml  pyproject.toml
.GitHub/workflows/: release.yml
bot/: __main__.py  commands.py  config.py
bot/db/: __init__.py  models.py  requests.py
bot/dialogs/: create_list.py  edit_list_settings.py  list_viewer.py  states.py
bot/handlers/: __init__.py  basic.py  view.py
bot/locales/en/: basic.ftl  tasklist.ftl
bot/locales/ru/: basic.ftl  tasklist.ftl
bot/middlewares/: throttling.py  user.py
bot/utils/: calldata.py  permissions.py
bot/utils/widgets/: __init__.py  copy_button.py  i18n_format.py
